<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.user.achtung.Menu">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title"
        android:layout_marginTop="75dp"
        android:textColor="@color/text_color"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="36dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/play"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_alignRight="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_marginTop="100dp"
        android:textColor="@color/text_color"
        android:background="@drawable/main_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host"
        android:id="@+id/host"
        android:layout_below="@+id/play"
        android:layout_alignEnd="@+id/play"
        android:layout_alignStart="@+id/play"
        android:layout_marginTop="25dp"
        android:textColor="@color/text_color"
        android:background="@drawable/main_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:id="@+id/score"
        android:layout_below="@+id/host"
        android:layout_alignEnd="@+id/host"
        android:layout_alignStart="@+id/host"
        android:layout_marginTop="25dp"
        android:textColor="@color/text_color"
        android:background="@drawable/main_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settings"
        android:textColor="@color/text_color"
        android:layout_below="@+id/score"
        android:layout_alignEnd="@+id/score"
        android:layout_alignStart="@+id/score"
        android:layout_marginTop="25dp"
        android:background="@drawable/main_button"/>
</RelativeLayout>
